feat: :art: a lot of changes had been done
backend:  only swagger and documentation,frontend: responsive done and get of everycategory done
